; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/arkag/extr_arkag.c_sec_mod.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/arkag/extr_arkag.c_sec_mod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@current_os = common dso_local global i64 0, align 8
@OS_MAC = common dso_local global i64 0, align 8
@KC_LCTL = common dso_local global i32 0, align 4
@KC_LGUI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sec_mod(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %16

5:                                                ; preds = %1
  %6 = load i64, i64* @current_os, align 8
  %7 = load i64, i64* @OS_MAC, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load i32, i32* @KC_LCTL, align 4
  %11 = call i32 @register_code(i32 %10)
  br label %15

12:                                               ; preds = %5
  %13 = load i32, i32* @KC_LGUI, align 4
  %14 = call i32 @register_code(i32 %13)
  br label %15

15:                                               ; preds = %12, %9
  br label %27

16:                                               ; preds = %1
  %17 = load i64, i64* @current_os, align 8
  %18 = load i64, i64* @OS_MAC, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %16
  %21 = load i32, i32* @KC_LCTL, align 4
  %22 = call i32 @unregister_code(i32 %21)
  br label %26

23:                                               ; preds = %16
  %24 = load i32, i32* @KC_LGUI, align 4
  %25 = call i32 @unregister_code(i32 %24)
  br label %26

26:                                               ; preds = %23, %20
  br label %27

27:                                               ; preds = %26, %15
  ret void
}

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
